Changes since version 1.4.0
---------------------------

- Removed IceBox::ServiceBase and IceBox::FreezeService. There's now
  a single IceBox::Service interface.

- IcePack descriptors have been redesigned. See the manual for more 
  information on the new descriptor format.

- Some IcePack improvements:
  
  * Descriptors are now parsed only by the icepackadmin tool, therefore
    it is no longer necessary to store the descriptor files on each
    IcePack node or registry host.
  
  * It is now possible to update an application or server deployment 
    by modifying its XML descriptor and using the `application 
    update' or `server update' commands in icepackadmin.

  * It is now possible to define variables from the icepackadmin
    command line when deploying or updating an application or server.

  * An icepackadmin `node remove' command has been added to clean up
    resources associated with a given node.

  * A command line option `--checkdb' has been added to the icepacknode
    executable. When the node is started with this option, it performs
    a consistency check on its database to remove servers that are no
    longer registered with the IcePack registry.

Changes since version 1.3.0
---------------------------

- Added a fix to the mutex tests in test/IceUtil/thread for FreeBSD.

- Modified the Ice::Service class to support the Ice.Nohup property,
  rename the win9x function to checkSystem, and add more flexibility
  in configuring services. See the reference manual for more
  information.

- Added unsupported FreeBSD port.

- Ice now builds with GCC 3.4.0.

- Fixed a bug when making asynchronous invocations on a routed proxy.

- Removed slice2wsdl.

- Changed the way sequences are unmarshaled to protect against
  malicous messages with faked very large sequence count values.
  While even with previous versions of Ice, buffer overruns were
  impossible, malicious messages could cause large amounts of memory